        ==accessibility== redefine tinyMCEblockformats. Support followings: p, h2, h3, pre and blockquote.
        ==accessiblilty== add correct translation to headings (instead of kiemelés)
        ==upload css.min
    
    commit #16.4.13
        Date: 22 April
        ==test before upload to repository ==
            - correct content-date position fixings (still not good enough)
            -create minify css. This is set as default, and the unminified is the style.original.css
            -screenshot update (a new has Hungarian content)
        ==code validation process==
            -remove unnecessary role attributes
            -delete searchform.php, which can be called many times in one page. Now header has its own form, widget will use WP standard searchform. 
        
version 16.5
    
    Oaron dd. 24 April (w/o number)
        - removed duplicate complementary, added region role to the widgets
     commit #16.5.2
        ==speed booster == delete gmpg and pingback direct html from header.php
    Oaron dd. 24 Apr.
        ==coding standard == use home() instead of get_site_url()
    commit # 16.5.4
        - add image list to sitepmap
        - change font awesome to verion 4.6.0 (included new accessiblilty icons)
        -header: delete gmpg and pingback links.
    commit #16.5.6
        13 May, 2016
        -css: delete comment border (empty comment shows horizontal line), remove an !important, where not necessary
        -header.php delete yoast breadcrumb. Change manduca_breadcrumb function, if necessary.
        ==accessibility== add underline to widget links.
        -remove login redirect after signup
        ==accessibility==add icons instead of ascii.
    commit #16.5.7
        14 May, 2016
        ==better typography==
            -remove display two column.
            - Check line-height,
            - add rem base to font-size,
            - remove undeline in links, instead use border