@@ -68,7 +68,7 @@
 		</div>
 	
 	
-		<div class="breadrcumb" id="breadcrumb" aria-label="<?php _e( 'Breadcrumb navigation', 'manduca'); ?>" role="navigation">	
+		<div class="breadcrumb" id="breadcrumb" aria-label="<?php _e( 'Breadcrumb navigation', 'manduca'); ?>" role="navigation">	
 	
 			<?php manduca_breadcrumb(); ?>
 		
