@@ -18,7 +18,7 @@ get_header(); ?>
 			<?php manduca_page_navigation(); ?>
 
 			<?php /* Start the Loop */ ?>
-			<?php manduca_display_in_two_columns() ?>
+			<?php manduca_display_excerpt() ?>
 
 		<?php else : ?>
 
